# telegram-scraper-bot

./: .env.example  .gitignore  ACKNOWLEDGEMENTS.md  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  LICENSE  PRIVACY.md  README.md  SECURITY.md  TERMS.md  bot.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  feedback.yml
.github/workflows/: announce-release.yml  bump-version.yml  ci.yml  notify-ci-failure.yml  release.yml
bot/: __init__.py  auth.py  classifier.py  config.py  dispatcher.py  file_parser.py  gates.py  main.py  preview.py
bot/handlers/: __init__.py  callbacks.py  conversation.py  dispatch_flow.py  error.py  help.py  retry.py  shortcuts.py  status.py  version.py  whoami.py
deploy/: README.md  bot.service
docs/: DEV_ENV.md  RELEASING.md  USER_GUIDE.md
docs/tracker-workflows/: itch-bot-ingest.yml  steam-bot-ingest.yml
tests/: conftest.py  test_callbacks.py  test_classifier.py  test_config.py  test_conversation.py  test_dispatch_flow.py  test_dispatcher.py  test_error_handler.py  test_file_parser.py  test_gates.py  test_help.py  test_main.py  test_preview.py  test_retry.py  test_shortcuts.py  test_status.py  test_version.py  test_whoami.py
