[project]
name = "telegram-scraper-bot"
version = "0.1.0"
description = "Telegram bot that dispatches Steam/itch.io scraping jobs to GitHub Actions"
requires-python = ">=3.11"
authors = [{ name = "Kokone", email = "noreply@example.com" }]
license = { text = "MIT" }
readme = "README.md"

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]

[tool.coverage.run]
source = ["bot"]
branch = true
omit = ["bot/main.py"]  # entry point, not unit-testable

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"
